# vis-inference-modeling

./: .gitignore  .gitkeep  README.md  pyproject.toml
data/: README.md  combine_images.py  data.csv  html_comments_parser.py  update_explorer_data.py
explorer/: README.md  pnpm-lock.yaml  vite.config.js  vite.config.ts
explorer/public/: extraction_pipeline
explorer/scripts/: build-articles-index.py  generate-png-list.js
explorer/src/: App.tsx  types.ts
explorer/src/components/: Header.tsx
explorer/src/pages/: Gallery.tsx  ImageDetail.tsx  (+1 more)
extraction_pipeline/: 1-5_classify_ace_sentences_visual.py  10_visualize_graph.py  11_label_graphs.py  12_label_ace_categories.py  1_extract_ace_comments.py  2_classify_ace_sentences.py  3_cluster_themes.py  3_dependency_classification.py  4_combine_dataframe.py  4_dependency_classification.py  5_combine_dataframe.py  6_combine_similar_nodes.py  EDGE_CLASSIFICATION.md  PIPELINE-1.md  PIPELINE.md  analyze_statement_clusters.py  graph_analysis.ipynb  run_article_pipeline.py  validate_ace.py
extraction_pipeline/ace_classifications/: ace_sentence_classifications_181.json  ace_sentence_classifications_183.json  ace_sentence_classifications_35.json
extraction_pipeline/analysis/: 1_across_plot.ipynb  reliability.ipynb  reliability.py  results.ipynb
extraction_pipeline/combined_data/: 123.json  158.json  173.json  181.json  183.json  35.json  91.json
extraction_pipeline/prompts/: ace_comment_to_sentences.txt  classify_ace_sentences.txt  classify_visual_observations.txt  cluster_ace_themes.txt  dependency_classification.txt
(+807 files in other folders)
